hphp/hack/test/typecheck/reactive/mutable_inout1.php.exp
File "mutable_inout1.php", line 4, characters 21-45:
`__Mutable`, `__MaybeMutable` and `__OwnedMutable` annotations are not allowed on inout parameters. (Parsing[1002])
File "mutable_inout1.php", line 9, characters 21-45:
`__Mutable`, `__MaybeMutable` and `__OwnedMutable` annotations are not allowed on inout parameters. (Parsing[1002])
